병합 오류 수정

--- a/app/src/main/res/layout/activity_nickname_setup.xml
+++ b/app/src/main/res/layout/activity_nickname_setup.xml
@@ -10,7 +10,7 @@
     <!-- 툴바 -->
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar_basic" />
+        layout="@layout/tool_bar_basic_lagacy" />
 
     <ScrollView
         android:layout_width="match_parent"
