--- a/app/src/main/res/layout/activity_all_categories.xml
+++ b/app/src/main/res/layout/activity_all_categories.xml
@@ -9,10 +9,8 @@
     tools:context=".ui.category.AllCategoriesActivity">
 
     <include
-        android:id="@+id/toolbarContainer"
-        layout="@layout/toolbar_basic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_basic" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_categories"
