--- a/app/src/main/res/layout/activity_userpage.xml
+++ b/app/src/main/res/layout/activity_userpage.xml
@@ -401,9 +401,9 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginEnd="16dp"/>
 
-                    <!-- 테마 -->
+                    <!-- 알레르기 설정 -->
                     <LinearLayout
-                        android:id="@+id/layout_theme"
+                        android:id="@+id/layout_allergy_settings"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
@@ -419,7 +419,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="테마"
+                            android:text="알레르기 설정"
                             android:textSize="16sp"
                             android:textColor="@color/black20"
                             android:fontFamily="@font/notosans_medium"
@@ -443,7 +443,7 @@
 
                     <!-- 메뉴 -->
                     <LinearLayout
-                        android:id="@+id/layout_none"
+                        android:id="@+id/layout_notification_settings"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
@@ -459,7 +459,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="메뉴"
+                            android:text="알림 설정"
                             android:textSize="16sp"
                             android:textColor="@color/black20"
                             android:fontFamily="@font/notosans_medium"
