--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -443,14 +443,9 @@
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
 
-            <com.google.android.material.bottomnavigation.BottomNavigationView
+            <include
                 android:id="@+id/bottom_navigation_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                app:menu="@menu/menu_bottom_nav"
-                app:labelVisibilityMode="unlabeled"
-                app:itemIconSize="25dp"/>
+                layout="@layout/navigation_bottom" />
         </LinearLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
