--- a/app/src/main/res/layout/activity_recent.xml
+++ b/app/src/main/res/layout/activity_recent.xml
@@ -11,49 +11,10 @@
     >
 
     <!-- 상태 표시줄 패딩 -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/search_color"
-        android:paddingTop="30dp" />
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_basic" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/top_bar_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_search_top"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:paddingStart="8dp"
-        android:paddingEnd="16dp">
-
-        <ImageView
-            android:id="@+id/iv_back_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="뒤로가기"
-            android:padding="8dp"
-            android:src="@drawable/ic_arrow_back"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:adjustViewBounds="true"
-            android:scaleType="centerInside"/>
-
-        <TextView
-            android:id="@+id/tv_recent_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="최근 본 레시피"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toEndOf="@id/iv_back_button"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    <!-- 콘텐츠 영역 -->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
