--- a/app/src/main/res/layout/navigation_bottom.xml
+++ b/app/src/main/res/layout/navigation_bottom.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/bottomBarContainer"
-    app:cardCornerRadius="28dp"
-    app:cardElevation="12dp">
+    android:id="@+id/bottomBarContainer">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/bg_bottom_nav"
         android:minHeight="48dp"
 
         app:itemActiveIndicatorStyle="@null"
@@ -20,4 +18,4 @@
         app:itemRippleColor="@android:color/transparent"
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/menu_bottom_nav" />
-</androidx.cardview.widget.CardView>
+</LinearLayout>
