--- a/app/src/main/res/layout/cook_write_02.xml
+++ b/app/src/main/res/layout/cook_write_02.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 변경점 1: 최상위 레이아웃을 RelativeLayout으로 변경 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Cook_Write_02_Layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:id="@+id/Cook_Write_02_Layout">
+    android:background="@color/white">
 
-    <!-- 상단 고정 툴바 부분 (변경 없음) -->
+    <!-- 상단 고정 툴바 부분 -->
     <LinearLayout
         android:id="@+id/top_bar_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:background="@color/search_color"/>
+            android:background="@color/search_color" />
 
         <LinearLayout
             android:id="@+id/toolbar"
@@ -30,7 +29,6 @@
             android:orientation="horizontal"
             android:paddingHorizontal="16dp">
 
-            <!-- 뒤로가기 버튼 -->
             <ImageView
                 android:id="@+id/iv_back"
                 android:layout_width="wrap_content"
@@ -42,144 +40,114 @@
                 android:layout_height="0dp"
                 android:layout_weight="1" />
 
-            <!-- 임시저장 버튼 -->
             <TextView
                 android:id="@+id/btn_temp_save"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
+                android:layout_marginEnd="8dp"
                 android:background="@drawable/bg_gray_rounded"
                 android:gravity="center"
                 android:paddingHorizontal="12dp"
-                android:layout_marginEnd="8dp"
                 android:text="임시저장"
                 android:textColor="#333333"
                 android:textSize="14sp" />
-
-            <!-- 저장 버튼 -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                android:background="@drawable/bg_orange_button_rounded"
-                android:gravity="center"
-                android:paddingHorizontal="18dp"
-                android:text="저장"
-                android:textColor="@android:color/white"
-                android:textSize="14sp"
-                android:textStyle="bold"/>
         </LinearLayout>
     </LinearLayout>
 
     <!-- 스크롤 가능한 메인 컨텐츠 -->
-    <!-- 변경점 2: layout_below와 layout_above를 사용해 위치 지정 -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/top_bar_container"
         android:layout_above="@+id/btn_next_container"
+        android:layout_below="@id/top_bar_container"
         android:fillViewport="true">
 
-        <!-- 내부는 변경 없음 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp"
-            android:layout_marginTop="20dp">
+            android:padding="16dp">
 
-            <!-- 요리 재료 칸 부분 -->
-            <LinearLayout
+            <!-- 요리 재료 카드 -->
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
-                android:background="@drawable/bg_search_bar_orange_border"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:paddingTop="5dp"
-                    android:text="재료"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="2dp">
 
                 <LinearLayout
-                    android:id="@+id/ingredients_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" />
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
-                <TextView
-                    android:id="@+id/button_add_ingredient"
-                    android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:layout_margin="5dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/bg_orange_button_rounded"
-                    android:gravity="center"
-                    android:text="+ 추가"
-                    android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
-            </LinearLayout>
+                    <TextView
+                        style="@style/CookWriteTitle"
+                        android:layout_marginBottom="12dp"
+                        android:text="재료" />
 
-            <!-- 요리 도구 칸 부분 -->
-            <LinearLayout
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_ingredients"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:nestedScrollingEnabled="false"
+                        tools:itemCount="3"
+                        tools:listitem="@layout/item_ingredient" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <!-- 요리 도구 카드 -->
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
-                android:background="@drawable/bg_search_bar_orange_border"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:paddingTop="5dp"
-                    android:text="조리 도구"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="2dp">
 
                 <LinearLayout
-                    android:id="@+id/tools_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" />
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
-                <TextView
-                    android:id="@+id/button_add_tool"
-                    android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:layout_margin="5dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/bg_orange_button_rounded"
-                    android:gravity="center"
-                    android:text="+ 추가"
-                    android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
-            </LinearLayout>
+                    <TextView
+                        style="@style/CookWriteTitle"
+                        android:layout_marginBottom="12dp"
+                        android:text="조리 도구" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_tools"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:nestedScrollingEnabled="false"
+                        tools:itemCount="2"
+                        tools:listitem="@layout/item_tool" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
     </ScrollView>
+
     <LinearLayout
         android:id="@+id/btn_next_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/btn_next"
             android:layout_width="match_parent"
             android:layout_height="52dp"
-            android:background="@drawable/bg_orange_button_rounded"
-            android:gravity="center"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="20dp"
+            android:background="@drawable/bg_orange_button_rounded"
+            android:gravity="center"
             android:text="다음  >"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
