--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -1,84 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="center"
-    android:layout_margin="5dp"
-    android:background="@drawable/bg_search_bar_orange_border"
-    android:orientation="horizontal">
-    <!-- 재료 입력칸 -->
-    <LinearLayout
-        android:id="@+id/frame"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="0.3"
-        android:background="@drawable/bg_search_bar_orange_border"
-        android:elevation="4dp"
-        android:orientation="horizontal">
-        <EditText
-            android:id="@+id/a1"
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:hint="재료를 입력해주세요"
-            android:textColor="@color/black"
-            android:background="@drawable/bg_main_rounded_top_white"
-            android:textColorHint="#CCCCCC"
-            android:textSize="16dp"
-            android:maxLines="1"
-            android:singleLine="true"/>
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="center_vertical"
+    android:paddingVertical="4dp">
 
-        <EditText
-            android:id="@+id/a2"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="5dp"
-            android:hint="0"
-            android:inputType="number"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:background="@drawable/bg_login_rounded"
-            android:textColorHint="#CCCCCC"
-            android:textSize="16dp"/>
+    <EditText
+        android:id="@+id/et_ingredient_name"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_weight="1"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/bg_gray_rounded_light"
+        android:hint="재료"
+        android:inputType="text"
+        android:maxLines="1"
+        android:paddingHorizontal="16dp"
+        android:textColorHint="@color/text_secondary"
+        android:textSize="14sp" />
 
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/unit_text_input_layout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="2"
-            app:hintEnabled="false">
-
-        <AutoCompleteTextView
-            android:id="@+id/unit_autocomplete_textview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/bg_login_rounded"
-            android:gravity="center"
-            android:hint="단위"
-            android:inputType="text"
-            android:paddingTop="12dp"
-            android:paddingBottom="12dp"
-            android:textSize="13sp" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    </LinearLayout>
+    <EditText
+        android:id="@+id/et_ingredient_amount"
+        android:layout_width="100dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/bg_gray_rounded_light"
+        android:gravity="center"
+        android:hint="양"
+        android:inputType="text"
+        android:maxLines="1"
+        android:textColorHint="@color/text_secondary"
+        android:textSize="14sp" />
 
     <ImageButton
-        android:id="@+id/delete_material"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center"
+        android:id="@+id/btn_delete_ingredient"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="삭제"
         android:src="@drawable/ic_close"
-        android:background="@color/white"
-        android:layout_margin="5dp"
-        />
+        app:tint="@color/text_secondary" />
+
 </LinearLayout>
